k8s/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-eks-alb-ingress
  namespace: enterprise-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:YOUR-AWS-ID-d915-4115-bcfb-15ae3434999f
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: caremedix.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enterprise-eks-service
                port:
                  number: 80
