k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enterprise-app-network-policy
  namespace: enterprise-app
spec:
  podSelector:
    matchLabels:
      app: enterprise-eks-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 80
